# wextract

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml
cmake/: dependencies.cmake
include/: defer.h  helpers.h  synth.h  threadpool.h  wavetable.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  helpers.cpp  main.cpp  synth.cpp
